1st Stab at Flux. Flow through Flux confirmed. npm install flux --save
- package.json - Adds flux ^2.0.1 `npm install flux --save`
- Implements "psuedo" Flux. (UIa->listen)+(UI->action)->(FluxFlow :+1:)

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "flux": "^2.0.1",
     "lodash": "^3.6.0",
     "moment": "^2.9.0",
     "react": "^0.13.1"
